--- a/package.json
+++ b/package.json
@@ -8,6 +8,20 @@
   "engines": {
     "vscode": "^1.108.1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uisap/ui5-bsp-manager"
+  },
+  "keywords": [
+    "sap",
+    "ui5",
+    "bsp",
+    "abap",
+    "fiori",
+    "deployment",
+    "upload",
+    "download"
+  ],
   "categories": [
     "Other"
   ],
