--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "displayName": "UI5 BSP Manager",
   "description": "SAP BSP Upload & Download Manager for UI5 Applications",
   "version": "0.0.1",
-  "publisher": "uisap",
+  "publisher": "uisap-tech",
+  "author": {
+    "name": "Ahmet Dik",
+    "email": "ahmet.dik@uisap.com",
+    "url": "https://www.uisap.com.tr/tr/"
+  },
+  "company": "UISAP Bilgi Teknolojileri",
   "icon": "resources/icon.png",
   "engines": {
     "vscode": "^1.108.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/uisap/ui5-bsp-manager"
+    "url": "https://github.com/UISAP-TECH/ui5-bsp-manager"
   },
   "keywords": [
     "sap",
