feat: Add Sidebar Shellbar Application template with navigation and layout
- Created Main.view.xml for the main application layout including ShellBar and SideNavigation.
- Added NotFound.view.xml for handling 404 errors with a custom message and image.
- Implemented Settings.view.xml for a basic settings page layout.
- Introduced TemplateService.ts to manage template information and project generation logic.
- Developed CreateProjectPanel.ts for the project creation UI, including template selection and project configuration steps.
- Integrated UI5 version fetching and service type selection in the project creation process.

--- a/package.json
+++ b/package.json
@@ -119,6 +119,12 @@
         "title": "Deploy BSP Application",
         "category": "BSP Manager",
         "icon": "$(cloud-upload)"
+      },
+      {
+        "command": "bspManager.createProject",
+        "title": "Create SAPUI5 Project",
+        "category": "BSP Manager",
+        "icon": "$(file-add)"
       }
     ],
     "viewsContainers": {
@@ -238,10 +244,15 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "ejs": "^3.1.10",
     "fast-xml-parser": "^4.3.0",
     "nwabap-ui5uploader": "^1.2.0"
   },
+  "bundledDependencies": [
+    "ejs"
+  ],
   "devDependencies": {
+    "@types/ejs": "^3.1.5",
     "@types/mocha": "^10.0.10",
     "@types/node": "22.x",
     "@types/vscode": "^1.104.0",
